lab1/Test/L1-A-12-90.output
Error Type B at Line 4
Error Type A at Line 25
Error Type A at Line 35
Error Type A at Line 38
